Update .gitignore, enhance WButton.qml properties, and improve translations
- Add quickshell/ directory to .gitignore
- Introduce new properties and tooltip functionality in WButton.qml for better UI interaction
- Update translations in en_US.json and vi_VN.json for clarity and consistency

--- a/config/quickshell/ii/translations/en_US.json
+++ b/config/quickshell/ii/translations/en_US.json
@@ -26,7 +26,7 @@
   "Enable": "Enable",
   "Elements": "Elements",
   "Start": "Start",
-  "Random SFW Anime wallpaper from Konachan\nImage is saved to ~/Pictures/Wallpapers": "Random SFW Anime wallpaper from Konachan\nImage is saved to ~/Pictures/Wallpapers",
+  "Random SFW Anime wallpaper from Konachan\nImage is saved to ~/Pictures/Wallpapers": "Random SFW wallpaper from Konachan\nImage is saved to ~/Pictures/Wallpapers",
   "The popular one | Best quantity, but quality can vary wildly": "The popular one | Best quantity, but quality can vary wildly",
   "System uptime:": "System uptime:",
   "illogical-impulse Welcome": "illogical-impulse Welcome",
@@ -132,7 +132,7 @@
   "Configuration": "Configuration",
   "Keep system awake": "Keep system awake",
   "Unknown command:": "Unknown command:",
-  "Anime boorus": "Anime boorus",
+  "Anime boorus": "Image boards",
   "To Do:": "To Do:",
   "Uses Gemini to categorize the wallpaper then picks a preset based on it.\nYou'll need to set Gemini API key on the left sidebar first.\nImages are downscaled for performance, but just to be safe,\ndo not select wallpapers with sensitive information.": "Uses Gemini to categorize the wallpaper then picks a preset based on it.\nYou'll need to set Gemini API key on the left sidebar first.\nImages are downscaled for performance, but just to be safe,\ndo not select wallpapers with sensitive information.",
   "Bottom": "Bottom",
@@ -177,7 +177,7 @@
   "Dot": "Dot",
   "Provider set to": "Provider set to",
   "Unknown Title": "Unknown Title",
-  "Anime": "Anime",
+  "Anime": "Wallpapers",
   "Refreshing (manually triggered)": "Refreshing (manually triggered)",
   "Dock": "Dock",
   "Require password to power off/restart": "Require password to power off/restart",
@@ -250,7 +250,7 @@
   "Suspend at": "Suspend at",
   "Jump to current month": "Jump to current month",
   "Bold": "Bold",
-  "Waifus only | Excellent quality, limited quantity": "Waifus only | Excellent quality, limited quantity",
+  "Waifus only | Excellent quality, limited quantity": "Characters only | Excellent quality, limited quantity",
   "Click to toggle light/dark mode\n(applied when wallpaper is chosen)": "Click to toggle light/dark mode\n(applied when wallpaper is chosen)",
   "Visualize region": "Visualize region",
   "Quote": "Quote",
@@ -268,7 +268,7 @@
   "Screen round corner": "Screen round corner",
   "Online | Google's model\nNewer model that's slower than its predecessor but should deliver higher quality answers": "Online | Google's model\nNewer model that's slower than its predecessor but should deliver higher quality answers",
   "Rainbow": "Rainbow",
-  "Weeb": "Weeb",
+  "Weeb": "Casual",
   "Large language models": "Large language models",
   "Online models disallowed\n\nControlled by `policies.ai` config option": "Online models disallowed\n\nControlled by `policies.ai` config option",
   "Policies": "Policies",
@@ -533,7 +533,7 @@
   "LMB to enable/disable\nRMB to toggle size\nScroll to swap position": "LMB to enable/disable\nRMB to toggle size\nScroll to swap position",
   "Identify Music": "Identify Music",
   "Quick toggles": "Quick toggles",
-  "Hide sussy/anime wallpapers": "Hide sussy/anime wallpapers",
+  "Hide sussy/anime wallpapers": "Hide questionable wallpapers",
   "Android": "Android",
   "Show": "Show",
   "Muted": "Muted",
