--- a/config/quickshell/ii/translations/vi_VN.json
+++ b/config/quickshell/ii/translations/vi_VN.json
@@ -56,7 +56,7 @@
   "Markdown test": "Test markdown",
   "Temperature: %1": "Nhiệt độ: %1",
   "Edit": "Sửa",
-  "Waifus only | Excellent quality, limited quantity": "Chỉ waifus | Chất lượng xuất sắc, số lượng hạn chế",
+  "Waifus only | Excellent quality, limited quantity": "Chỉ nhân vật | Chất lượng tốt, số lượng hạn chế",
   "Cheat sheet": "Bảng tra cứu",
   "Current model: %1\nSet it with %2model MODEL": "Model đang chọn: %1\nChọn với lệnh %2model MODEL",
   "Provider set to": "Đã đặt nhà cung cấp thành",
@@ -87,7 +87,7 @@
   "When not fullscreen": "Khi không toàn màn hình",
   "Resources": "Tài nguyên",
   "Light": "Sáng",
-  "Weeb": "Wibu",
+  "Weeb": "Thường",
   "Disable NSFW content": "Tắt nội dung NSFW",
   "OK": "OK",
   "Screenshot tool": "Công cụ chụp màn hình",
@@ -126,7 +126,7 @@
   "Could be better if you make a ton of typos,\nbut results can be weird and might not work with acronyms\n(e.g. \"GIMP\" might not give you the paint program)": "Có thể tốt hơn nếu bạn gõ lệch phím nhiều,\nnhưng kết quả có thể hơi lạ và không hoạt động tốt với từ viết tắt\n(ví dụ tìm \"GIMP\" có thể không ra cái chương trình vẽ)",
   "Shell & utilities theming must also be enabled": "Cần Shell & công cụ cũng bật",
   "Desktop": "Màn hình chính",
-  "Anime": "Anime",
+  "Anime": "Hình nền",
   "Qt apps": "Các ứng dụng Qt",
   "Style & wallpaper": "Phong cách & hình nền",
   "Finished tasks will go here": "Việc đã xong sẽ hiện ở đây",
@@ -195,7 +195,7 @@
   "Bluetooth": "Bluetooth",
   "Be patient...": "Bình tĩnh...",
   "Discussions": "Thảo luận",
-  "Anime boorus": "Các booru anime",
+  "Anime boorus": "Các bộ sưu tập ảnh",
   "That didn't work. Tips:\n- Check your tags and NSFW settings\n- If you don't have a tag in mind, type a page number": "Quả này không được. Mẹo:\n- Kiểm tra tag và cài đặt NSFW\n- Nếu không nghĩ ra tag nào có thể nhập số trang",
   "Task description": "Mô tả công việc",
   "Max allowed increase": "Thay đổi tối đa",
@@ -207,7 +207,7 @@
   "Unknown": "Không xác định",
   "Waiting for response...": "Đang chờ phản hồi...",
   "Workspace": "Workspace",
-  "Random SFW Anime wallpaper from Konachan\nImage is saved to ~/Pictures/Wallpapers": "Hình nền Anime SFW ngẫu nhiên từ Konachan\nẢnh được lưu vào ~/Pictures/Wallpapers",
+  "Random SFW Anime wallpaper from Konachan\nImage is saved to ~/Pictures/Wallpapers": "Hình nền SFW ngẫu nhiên từ Konachan\nẢnh được lưu vào ~/Pictures/Wallpapers",
   "Online via %1 | %2's model": "Trực tuyến qua %1 | Model của %2",
   "Always show numbers": "Luôn hiện số",
   "or": "hoặc",
