Refactor cheatsheet module and update configuration for improved usability
- Replaced the "Elements" section with "Commands" in the cheatsheet for clearer navigation.
- Removed the outdated CheatsheetPeriodicTable and related files to streamline the module.
- Introduced CheatsheetShellCommands to enhance command accessibility.
- Updated translations for "Commands" in both English and Vietnamese to maintain consistency across languages.

--- a/config/quickshell/ii/translations/en_US.json
+++ b/config/quickshell/ii/translations/en_US.json
@@ -25,6 +25,7 @@
   "Bluetooth devices": "Bluetooth devices",
   "Enable": "Enable",
   "Elements": "Elements",
+  "Commands": "Commands",
   "Start": "Start",
   "Random SFW Anime wallpaper from Konachan\nImage is saved to ~/Pictures/Wallpapers": "Random SFW wallpaper from Konachan\nImage is saved to ~/Pictures/Wallpapers",
   "The popular one | Best quantity, but quality can vary wildly": "The popular one | Best quantity, but quality can vary wildly",
