config: Introduce blur effect toggle for bar and sidebars, enhancing UI performance and customization options
- Added a new configuration option to enable or disable blur effects in the bar, sidebars, and popups, which can reduce GPU load when set to false.
- Updated relevant QML files to utilize the new blur setting, ensuring consistent behavior across UI components.
- Included translations for the new settings in English and Vietnamese.

--- a/config/quickshell/ii/translations/en_US.json
+++ b/config/quickshell/ii/translations/en_US.json
@@ -98,6 +98,10 @@
   "12h am/pm": "12h am/pm",
   "Download complete": "Download complete",
   "Enable blur": "Enable blur",
+  "Bar & sidebars": "Bar & sidebars",
+  "Blur effect": "Blur effect",
+  "Enable blur in bar, sidebars and popups": "Enable blur in bar, sidebars and popups",
+  "When off, surfaces use solid background (reduces GPU load).": "When off, surfaces use solid background (reduces GPU load).",
   "Second hand": "Second hand",
   "Bar & screen": "Bar & screen",
   "Discharging:": "Discharging:",
