--- a/config/quickshell/ii/translations/vi_VN.json
+++ b/config/quickshell/ii/translations/vi_VN.json
@@ -370,5 +370,9 @@
   "illogical-impulse Settings": "Cài đặt illogical-impulse",
   "Online | Google's model\nNewer model that's slower than its predecessor but should deliver higher quality answers": "Trực tuyến | Model của Google\nMới hơn nhưng chậm hơn so với phiên bản trước nhưng nên cung cấp câu trả lời chất lượng cao hơn",
   "Preferred wallpaper zoom (%)": "Tỷ lệ thu phóng hình nền (%)",
-  "Function Response": "Phản hồi function"
+  "Function Response": "Phản hồi function",
+  "Bar & sidebars": "Thanh bar & sidebar",
+  "Blur effect": "Hiệu ứng mờ",
+  "Enable blur in bar, sidebars and popups": "Bật mờ trên bar, sidebar và popup",
+  "When off, surfaces use solid background (reduces GPU load).": "Khi tắt, bề mặt dùng nền đặc (giảm tải GPU)."
 }
